--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^9.9.0",
     "stripe": "^8.154.0"
   },
   "devDependencies": {
